--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@electron-forge/plugin-webpack": "6.0.0-beta.63",
+    "@types/knex": "^0.16.1",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -86,7 +87,10 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
+    "knex": "^1.0.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2"
   }
 }
